--- a/.github/workflows/build_ErfanGSIs.yml
+++ b/.github/workflows/build_ErfanGSIs.yml
@@ -14,9 +14,9 @@ on:
     types: [started]
     
 env:
-  ROM_URL: http://bigota.d.miui.com/20.4.27/miui_MIMIX3_20.4.27_8f7879221b_10.0.zip
-  ROM_NAME: MIUI
-  BUILD_TYPE: ab
+  ROM_URL: https://124-227-148-1.ksyungslb.com/bigota.d.miui.com/V11.0.4.0.PCGCNXM/miui_HM6_V11.0.4.0.PCGCNXM_8ab510b0e5_9.0.zip?ksy_gslb_referer=https%3A%2F%2Fxiaomirom.com%2F
+  ROM_NAME: YK_MIUI
+  BUILD_TYPE: Aonly
   TZ: Asia/Shanghai
 
 jobs:
