--- a/.github/workflows/build_ErfanGSIs.yml
+++ b/.github/workflows/build_ErfanGSIs.yml
@@ -15,7 +15,7 @@ on:
     
 env:
   ROM_URL: https://124-227-148-1.ksyungslb.com/bigota.d.miui.com/V11.0.4.0.PCGCNXM/miui_HM6_V11.0.4.0.PCGCNXM_8ab510b0e5_9.0.zip?ksy_gslb_referer=https%3A%2F%2Fxiaomirom.com%2F
-  ROM_NAME: YK_MIUI
+  ROM_NAME: MIUI
   BUILD_TYPE: Aonly
   TZ: Asia/Shanghai
 
