--- a/.github/workflows/build_ErfanGSIs.yml
+++ b/.github/workflows/build_ErfanGSIs.yml
@@ -14,7 +14,7 @@ on:
     types: [started]
     
 env:
-  ROM_URL: https://124-227-148-1.ksyungslb.com/bigota.d.miui.com/V11.0.4.0.PCGCNXM/miui_HM6_V11.0.4.0.PCGCNXM_8ab510b0e5_9.0.zip?ksy_gslb_referer=https%3A%2F%2Fxiaomirom.com%2F
+  ROM_URL: https://bigota.d.miui.com/V11.0.5.0.PCGMIXM/miui_HM6Global_V11.0.5.0.PCGMIXM_492a4cb4f5_9.0.zip
   ROM_NAME: MIUI
   BUILD_TYPE: Aonly
   TZ: Asia/Shanghai
