--- a/.github/workflows/build_ErfanGSIs.yml
+++ b/.github/workflows/build_ErfanGSIs.yml
@@ -16,7 +16,7 @@ on:
 env:
   ROM_URL: https://bigota.d.miui.com/V11.0.5.0.PCGMIXM/miui_HM6Global_V11.0.5.0.PCGMIXM_492a4cb4f5_9.0.zip
   ROM_NAME: MIUI
-  BUILD_TYPE: Aonly
+  BUILD_TYPE: aonly
   TZ: Asia/Shanghai
 
 jobs:
@@ -59,7 +59,7 @@ jobs:
          run: |
               cd $GITHUB_WORKSPACE/ErfanGSIs/output
               curl -sL https://git.io/file-transfer | sh
-              ./transfer gof ./final/GSI.zip
+              ./transfer wet ./final/GSI.zip
 
          
             
